--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Intellij
+.idea/
+.lift/
+out/
+
+# Percolation
+examples/
+
 # Compiled class file
 *.class
 
@@ -11,7 +19,7 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
+# *.jar
 *.war
 *.nar
 *.ear
